--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,5 +1,5 @@
 <!-- START PRICING TABLE CONTAINER -->
-<div class="zone1 ">
+<div class="pricing ">
     <div class="valign-wrapper">
         <div class="valign">
             <div class="row">
