Bug lien detail post

--- a/src/app/components/directives/cms/post-list/post-list.html
+++ b/src/app/components/directives/cms/post-list/post-list.html
@@ -16,7 +16,7 @@
                     <div class="col s6 center-align">
                         <post-author author-id="event.author"></post-author>
                         <span ng-bind-html="event.excerpt.rendered"></span>
-                        <a href="#/blog/{{p.id}}" class="btn btn-sm accent-color"
+                        <a href="#/blog/{{event.id}}" class="btn btn-sm accent-color"
                            translate="commons.buttons.read-more"></a>
                     </div>
                 </div>
