--- a/src/app/components/directives/cms/post-list/post-list.html
+++ b/src/app/components/directives/cms/post-list/post-list.html
@@ -6,7 +6,7 @@
             </timeline-badge>
 
             <timeline-panel class="info default-text-color">
-                <span class="post-date" ng-bind-html="formatDate(p.date)"></span>
+                <span class="post-date" ng-bind-html="formatDate(event.date)"></span>
                 <h5><span class="secondary-text-color" ng-bind-html="event.title.rendered"></span></h5>
                 <div class="row">
                     <div class="col s6">
