--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -10,18 +10,18 @@
         <div class="col s12">
             <div class="row">
                 <div class="col m2 center-align" translate="billingPage.label.activity"></div>
-                <div class="col m2 center-align" translate="billingPage.label.product"></div>
-                <div class="col m1 center-align" translate="billingPage.label.price"></div>
+                <div class="col m1 center-align" translate="billingPage.label.product"></div>
+                <div class="col m2 center-align" translate="billingPage.label.price"></div>
                 <div class="col m2 center-align" translate="billingPage.label.billingnumber"></div>
                 <div class="col m2 center-align" translate="billingPage.label.billingdate"></div>
                 <div class="col m2 center-align" translate="billingPage.label.pay.cardNumber"></div>
-                <div class="col m2 center-align"></div>
+                <div class="col m1 center-align"></div>
             </div>
             <div ng-repeat="plan in user.account.listPlan track by $index" class="row light-primary-color">
                 <div class="col m2 center-align">
                     <h6 translate="{{plan.activity.label}}"></h6>
                 </div>
-                <div class="col m2 center-align accent-text-color">
+                <div class="col m1 center-align accent-text-color">
                     <h6>{{plan.levelPlan}}<br/>
                         <span ng-if="plan.inTrial">
                             <small translate="{{'billingPage.label.status.' + plan.status}}"
@@ -39,7 +39,7 @@
                             translate="billingPage.label.pay.title"></button>
                 </div>
                 <div ng-if="plan.status !== 'canceled' && plan.status !== 'open'">
-                    <div class="col m1 center-align"><span
+                    <div class="col m2 center-align"><span
                             ng-bind="plan.amountPaid"></span> €
                     </div>
                     <div class="col m2 center-align">
@@ -50,22 +50,25 @@
                     </div>
                     <div class="col m2 center-align" ng-if="plan.status === 'canceled'"></div>
                     <div class="col m2 center-align"><span ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4"></span>
+                    </div>
+                    <div class="col m1 center-align">
                         <button ng-click="unsubscribe($index)"
-                                class="btn waves-effect waves-white secondary-color pull-right">
+                                class="btn-floating waves-effect waves-white accent-color">
                             <div class="progress" ng-if="inProgress">
                                 <div class="indeterminate"></div>
                             </div>
+                            <i class="material-icons">cancel</i>
                             {{'billingPage.label.pay.unsubscribe.button' | translate}}
                         </button>
                     </div>
                 </div>
                 <table class="light-primary-color" ng-if="plan.invoices">
                     <thead>
-                    <tr><!-- TODO : i18n -->
-                        <th>id</th>
-                        <th>Montant</th>
-                        <th>Payé le</th>
-                        <th>Status</th>
+                    <tr>
+                        <th translate="billingPage.label.invoiceId"></th>
+                        <th translate="billingPage.label.invoiceAmount"></th>
+                        <th translate="billingPage.label.invoiceDate"></th>
+                        <th translate="billingPage.label.invoiceStatus"></th>
                     </tr>
                     </thead>
 
