Timeline goal et amélioration eventStat

--- a/src/app/components/directives/stats/hand/goalHeatMap/goalHeatMap.html
+++ b/src/app/components/directives/stats/hand/goalHeatMap/goalHeatMap.html
@@ -1,7 +1,12 @@
-<div class="card primary-text-color">
-    <div class="card-title dark-primary-color center">
-        <span class="title"><small translate="stats.typoGoal"></small></span>
-    </div>
+<div class="row">&nbsp;</div>
+
+<div class="row">
+    <div class="col s12 dark-text-color left"><h4><i class="fa fa-bullseye"></i> {{'stats.typoGoal' | translate }}</h4><hr></div>
+    <div class="row">&nbsp;</div>
+</div>
+
+<div class=" primary-text-color">
+    
     <div class="card-content white primary-text-color">
         <div class="row">
             <div class="col s12 align-center">
