Problème modal et bouton validation en vert

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -285,7 +285,7 @@
                 <button type="submit"
                         translate="commons.buttons.validate" ng-disabled="renewPwdForm.$invalid" tabindex="8"
                         ng-class="{'btn waves-effect waves-white disabled': renewPwdForm.$invalid, 
-                                  'btn waves-effect waves-white accent-color': !renewPwdForm.$invalid}">
+                                  'btn waves-effect waves-white secondary-color': !renewPwdForm.$invalid}">
                 </button>
 
             </div>
