--- a/src/app/modules/commons/users/password/pwdRenew.html
+++ b/src/app/modules/commons/users/password/pwdRenew.html
@@ -52,7 +52,7 @@
                 <div class="col s12">
                     <button ng-click="cancelRenew()" class="modal-action modal-close btn light-primary-color"
                             translate="commons.buttons.cancel"></button>
-                    <button type="submit" class="btn accent-color" ng-disabled="renewForm.$invalid"
+                    <button type="submit" class="btn secondary-color" ng-disabled="renewForm.$invalid"
                             translate="commons.buttons.validate"></button>
                 </div>
             </div>
