--- a/src/app/modules/sandbox/effective/team/writeTeam.html
+++ b/src/app/modules/sandbox/effective/team/writeTeam.html
@@ -100,7 +100,7 @@
                     <button type="submit" ng-click="writeTeam()" translate="commons.buttons.validate"
                             ng-disabled="teamForm.$invalid" tabindex="8"
                             ng-class="{'btn waves-effect waves-white disabled': teamForm.$invalid, 
-                                       'btn waves-effect waves-white accent-color': !teamForm.$invalid}">
+                                       'btn waves-effect waves-white secondary-color': !teamForm.$invalid}">
                     </button>
                 </div>
             </div>
