--- a/src/app/modules/commons/users/password/pwdUpdate.html
+++ b/src/app/modules/commons/users/password/pwdUpdate.html
@@ -66,7 +66,7 @@
 
                         <button type="submit" ng-disabled="pwdForm.$invalid" translate="commons.buttons.validate"
                                 ng-class="{'btn waves-effect waves-white disabled': pwdForm.$invalid, 
-                                           'btn waves-effect waves-white accent-color': !pwdForm.$invalid}"
+                                           'btn waves-effect waves-white secondary-color': !pwdForm.$invalid}"
                                 tabindex="4">
                         </button>
                     </div>
