--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -52,7 +52,7 @@
                             <div class="col s12">
                                 <label for="email">{{'profilePage.form.label.email' | translate }} <span
                                         class="accent-text-color">*</span></label>
-                                <input type="email" id="email" name="email"
+                                <input type="email" id="email" name="email" autocomplete="email"
                                        ng-pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
                                        class="validate"
                                        required ng-model="user.contact.email"
@@ -90,7 +90,7 @@
                                 <label for="userFirstname">{{'profilePage.form.label.firstname' | translate }} <span
                                         class="accent-text-color">*</span></label>
                                 <input ng-model="user.firstname" id="userFirstname" name="userFirstname" type="text"
-                                       class="validate" required
+                                       class="validate" required autocomplete="given-name"
                                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
                                 <span class="small accent-text-color"
                                       ng-if="profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine"
@@ -107,7 +107,7 @@
                                 <label for="userName">{{'profilePage.form.label.name' | translate }} <span
                                         class="accent-text-color">*</span></label>
                                 <input ng-model="user.name" id="userName" name="userName" type="text" class="validate"
-                                       required
+                                       required autocomplete="family-name"
                                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'"
                                        ng-class="{ 'has-error' : profileForm.userName.$invalid && !profileForm.userName.$pristine }">
                                 <span class="small accent-text-color"
@@ -161,32 +161,6 @@
 		                        </span>
                             </div>
                         </div>
-
-                        <!-- Address -->
-                        <div class="row">
-                            <div class="col s12">
-                                <label for="formatedAddress" translate="profilePage.form.label.address"></label>
-                                <input type="text" id="formatedAddress" name="formatedAddress" ng-autocomplete
-                                       ng-model="temp.addr" details="temp.detailsAdr"
-                                       options="temp.optionsAdr" placeholder=""/>
-                            </div>
-                        </div>
-
-                        <!-- Phone -->
-                        <div class="row">
-                            <div class="col s12">
-                                <i class="material-icons prefix">phone</i>
-                                <label for="userPhoneHome"><span class="accent-text-color">*</span></label>
-                                <input id="userPhoneHome" name="userPhoneHome" type="text"
-                                       ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate"
-                                       min="0" ng-model="user.contact.home" required>
-                                <span class="small accent-text-color"
-                                      ng-if="profileForm.userPhoneHome.$invalid && !profileForm.userPhoneHome.$pristine"
-                                      translate="profilePage.form.messageControl.phone">
-		                        </span>
-                            </div>
-                        </div>
-
                     </div>
                     <div class="col m1 hide-on-small-only">&nbsp;</div>
                 </div>
@@ -199,7 +173,7 @@
                         <button type="submit" ng-disabled="profileForm.$invalid" translate="commons.buttons.validate"
                                 ng-click="updateProfilUser()"
                                 ng-class="{'btn waves-effect waves-white disabled': profileForm.$invalid, 
-                                           'btn waves-effect waves-white accent-color': !profileForm.$invalid}">
+                                           'btn waves-effect waves-white secondary-color': !profileForm.$invalid}">
 
                         </button>
                     </div>
