--- a/src/app/modules/commons/users/signup/signupUser.html
+++ b/src/app/modules/commons/users/signup/signupUser.html
@@ -2,10 +2,8 @@
 
     <!-- Entete -->
     <div class="row">
-        <div class="col s12 accent-text-color center">
+        <div class="col s12 dark-text-color center">
             <h4 translate="signupStartPage.form.title"></h4>
-            <h3 ng-if="single"><span class="fa fa-fw fa-user"></span> Offre Individuelle</h3>
-            <h3 ng-if="!single"><span class="fa fa-fw fa-users"></span> Offre Club</h3>
         </div>
     </div>
 
@@ -16,7 +14,7 @@
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
                 <input id="firstname" name="firstname" type="text" class="validate" ng-model="signup.firstname" required
-                       tabindex="1"
+                       tabindex="1" autocomplete="on given-name"
                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
                 <label for="firstname" class="mandatory" translate="signupStartPage.form.label.firstname"></label>
                 <span class="small colorAccent-text invalid"
@@ -27,7 +25,8 @@
             <div class="col m2 hide-on-small-only">&nbsp;</div>
 
             <div class="col s12 m4 input-field">
-                <input id="name" name="name" type="text" class="validate" ng-model="signup.name" required tabindex="2"
+                <input id="name" name="name" type="text" class="validate" ng-model="signup.name" required 
+                       tabindex="2" autocomplete="on family-name"
                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
                 <label for="name" class="mandatory" translate="signupStartPage.form.label.name"></label>
                 <span class="small colorAccent-text invalid"
@@ -43,7 +42,7 @@
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
                 <input id="login" name="login" type="text" class="validate" ng-model="signup.account.login" required
-                       tabindex="3" ng-pattern="'[a-zA-Z0-9_\-]{3,}'">
+                       tabindex="3" ng-pattern="'[a-zA-Z0-9_\-]{3,}'" autocomplete="on username">
                 <label for="login" class="mandatory" translate="signupStartPage.form.label.login"></label>
                 <span class="small colorAccent-text invalid"
                       ng-if="signupStartPageForm.login.$error.pattern"
@@ -55,7 +54,7 @@
             <div class="col s12 m4 input-field">
                 <input type="text" name="email" id="email" ng-model="signup.contact.email"
                        ng-pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
-                       tabindex="4">
+                       tabindex="4" autocomplete="on email">
                 <label for="email" class="mandatory" translate="signupStartPage.form.label.email"></label>
                 <span ng-class="{'has-error': signupStartPageForm.email.$dirty && signupStartPageForm.email.$error.required}"
                       class="small colorAccent-text"
@@ -70,7 +69,7 @@
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
                 <input id="password" type="password" class="validate" ng-model="signup.account.passwd" required
-                       tabindex="5">
+                       tabindex="5" autocomplete="on new-password">
                 <label for="password" class="mandatory" translate="signupStartPage.form.label.password"></label>
                 <div ng-if="signup.account.passwd">
                     <small translate='signupStartPage.form.messageControl.passwdStrength'></small>
@@ -89,7 +88,7 @@
 
             <div class="col s12 m4 input-field">
                 <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate"
-                       ng-model="passwdConfirm" required tabindex="6" passwd-check="password">
+                       ng-model="passwdConfirm" required tabindex="6" passwd-check="password" autocomplete="on new-password">>
                 <label for="passwordConfirm" class="mandatory"
                        translate="signupStartPage.form.label.passwordConfirm"></label>
                 <span ng-if="signupStartPageForm.passwordConfirm.$dirty && signupStartPageForm.passwordConfirm.$error.pwmatch"
